fix paragraph alignment

--- a/css/creativity.css
+++ b/css/creativity.css
@@ -1,8 +1,4 @@
 
-.container{
-    padding-right: 115px;
-    padding-left: 115px;
-}
 .creativity{    background-color: #f1f1f1; padding-bottom: 100px;}
 .creativity .container-fluid{
     padding-left: 0px;
