--- a/css/video.css
+++ b/css/video.css
@@ -7,7 +7,7 @@
     border: 4px solid #f3f3f3;
     position: absolute;
     bottom: -30px;
-    left: 97px;
+    left: 86px;
     z-index: -1;
 }
 
